# duo_unix

./: Makefile.am  configure.ac
duo_offline_enroll/: Makefile.am  duo_offline_enroll.8  duo_offline_enroll.c
lib/: util.c  util.h
pam_duo/: Makefile.am  pam_duo.c  pam_duo_offline.c  pam_duo_offline.h
